Renamed Layout component to MainLayout, Carousel to HomeCarousel, Moved HomeCarousel to Carousel directory, Add TODO to check social previews, Removed unused React imports

--- a/src/components/Carousel/styles.css
+++ b/src/components/Carousel/styles.css
@@ -1,9 +1,4 @@
-body {
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/*  dummy carousel */
 
 [class^='number-slide'],
 [class*=' number-slide'] {
